--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,3 +22,6 @@ jinja2 = "^3.1.2"
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.poetry.scripts]
+textbase = "textbase.textbase_cli:cli"
