--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,7 +2,10 @@
 name = "textbase"
 version = "0.1.0"
 description = "A python library to help you create chatbots easily with some more configurations"
-authors = ["kaus-cofactory <kaustubhshukla@cofactory.ai>"]
+authors = [
+    "kaus-cofactory <kaustubhshukla@cofactory.ai>",
+    "Samartha S R <samarthar@cofactory.ai>"
+]
 readme = "README.md"
 
 [tool.poetry.dependencies]
@@ -18,6 +21,10 @@ guardrails-ai = "^0.1.8"
 llama-index = "^0.7.11.post1"
 jinja2 = "^3.1.2"
 
+[tool.blix.data]
+data_files = [
+    { destination = "share/textbase_frontend/", from = [ "textbase/frontend/index.html", "textbase/frontend/vite.svg" ] },
+]
 
 [build-system]
 requires = ["poetry-core"]
