--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,7 +17,7 @@ chromadb = "^0.4.2"
 guardrails-ai = "^0.1.8"
 llama-index = "^0.7.11.post1"
 jinja2 = "^3.1.2"
-
+SpeechRecognition = "^3.10.0"
 
 [build-system]
 requires = ["poetry-core"]
