--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,11 +17,17 @@ chromadb = "^0.4.2"
 guardrails-ai = "^0.1.8"
 llama-index = "^0.7.11.post1"
 jinja2 = "^3.1.2"
+pytest = "^7.4.0"
 
 
 [build-system]
 requires = ["poetry-core"]
-build-backend = "poetry.core.masonry.api"
+build-backend = "textbase.textbase_cli:cli"
 
 [tool.poetry.scripts]
 textbase = "textbase.textbase_cli:cli"
+deploy = "textbase.textbase_cli:deploy"
+frontend_template = "textbase.textbase_cli:frontend_template"
+
+[tool.poetry.urls]
+"Bug Tracker" = "https://github.com/cofactoryai/textbase/issues"
