Fix static files issue.
Fix the static files issue on all major operating systems.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,34 +1,153 @@
-[tool.poetry]
-name = "textbase"
-version = "0.1.0"
-description = "A python library to help you create chatbots easily with some more configurations"
-authors = [
-    "kaus-cofactory <kaustubhshukla@cofactory.ai>",
-    "Samartha S R <samarthar@cofactory.ai>"
-]
-readme = "README.md"
-
-[tool.poetry.dependencies]
-python = "^3.8.1"
-requests = "^2.31.0"
-openai = "^0.27.8"
-twilio = "^8.5.0"
-python-dotenv = "^1.0.0"
-langchain = "^0.0.239"
-pinecone-client = "^2.2.2"
-chromadb = "^0.4.2"
-guardrails-ai = "^0.1.8"
-llama-index = "^0.7.11.post1"
-jinja2 = "^3.1.2"
-
-[tool.blix.data]
-data_files = [
-    { destination = "share/textbase_frontend/", from = [ "textbase/frontend/index.html", "textbase/frontend/vite.svg" ] },
-]
-
 [build-system]
-requires = ["poetry-core"]
-build-backend = "poetry.core.masonry.api"
+requires = ["hatchling"]
+build-backend = "hatchling.build"
 
-[tool.poetry.scripts]
+[project]
+name = "textbase"
+dynamic = ["version"]
+description = 'A Python library which helps you create chatbots; plus some more configurations.'
+readme = "README.md"
+requires-python = ">=3.7"
+license = "MIT"
+keywords = []
+authors = [
+  { name = "kaus-cofactory", email = "kaustubhshukla@cofactory.ai"},
+  { name = "Samartha S R", email = "samarthar@cofactoryai.com" }
+]
+classifiers = [
+  "Development Status :: 4 - Beta",
+  "Programming Language :: Python",
+  "Programming Language :: Python :: 3.7",
+  "Programming Language :: Python :: 3.8",
+  "Programming Language :: Python :: 3.9",
+  "Programming Language :: Python :: 3.10",
+  "Programming Language :: Python :: 3.11",
+  "Programming Language :: Python :: Implementation :: CPython",
+  "Programming Language :: Python :: Implementation :: PyPy",
+]
+dependencies = [
+  "fastapi==0.99.1",
+  "requests~=2.31.0",
+  "openai~=0.27.8",
+  "twilio~=8.5.0",
+  "python-dotenv~=1.0.0",
+  "langchain~=0.0.239",
+  "pinecone-client~=2.2.2",
+  "guardrails-ai~=0.1.8",
+  "llama-index~=0.7.11.post1",
+  "jinja2~=3.1.2"
+]
+
+[project.urls]
+Documentation = "https://github.com/unknown/textbase#readme"
+Issues = "https://github.com/unknown/textbase/issues"
+Source = "https://github.com/unknown/textbase"
+
+[tool.hatch.version]
+path = "src/textbase/__about__.py"
+
+[tool.hatch.envs.default]
+dependencies = [
+  "coverage[toml]>=6.5",
+  "pytest",
+]
+[tool.hatch.envs.default.scripts]
+test = "pytest {args:tests}"
+test-cov = "coverage run -m pytest {args:tests}"
+cov-report = [
+  "- coverage combine",
+  "coverage report",
+]
+cov = [
+  "test-cov",
+  "cov-report",
+]
+
+[project.scripts]
 textbase = "textbase.textbase_cli:cli"
+
+[[tool.hatch.envs.all.matrix]]
+python = ["3.7", "3.8", "3.9", "3.10", "3.11"]
+
+[tool.hatch.envs.lint]
+detached = true
+dependencies = [
+  "black>=23.1.0",
+  "mypy>=1.0.0",
+  "ruff>=0.0.243",
+]
+[tool.hatch.envs.lint.scripts]
+typing = "mypy --install-types --non-interactive {args:src/textbase tests}"
+style = [
+  "ruff {args:.}",
+  "black --check --diff {args:.}",
+]
+fmt = [
+  "black {args:.}",
+  "ruff --fix {args:.}",
+  "style",
+]
+all = [
+  "style",
+  "typing",
+]
+
+[tool.black]
+target-version = ["py37"]
+line-length = 120
+skip-string-normalization = true
+
+[tool.ruff]
+target-version = "py37"
+line-length = 120
+select = [
+  "A",
+  "ARG",
+  "B",
+  "C",
+  "DTZ",
+  "E",
+  "EM",
+  "F",
+  "FBT",
+  "I",
+  "ICN",
+  "ISC",
+  "N",
+  "PLC",
+  "PLE",
+  "PLR",
+  "PLW",
+  "Q",
+  "RUF",
+  "S",
+  "T",
+  "TID",
+  "UP",
+  "W",
+  "YTT",
+]
+ignore = [
+  # Allow non-abstract empty methods in abstract base classes
+  "B027",
+  # Allow boolean positional values in function calls, like `dict.get(... True)`
+  "FBT003",
+  # Ignore checks for possible passwords
+  "S105", "S106", "S107",
+  # Ignore complexity
+  "C901", "PLR0911", "PLR0912", "PLR0913", "PLR0915",
+]
+unfixable = [
+  # Don't touch unused imports
+  "F401",
+]
+
+[tool.ruff.isort]
+known-first-party = ["textbase"]
+
+[tool.ruff.flake8-tidy-imports]
+ban-relative-imports = "all"
+
+[tool.ruff.per-file-ignores]
+# Tests can use magic values, assertions, and relative imports
+"tests/**/*" = ["PLR2004", "S101", "TID252"]
