--- a/textbase/frontend/package.json
+++ b/textbase/frontend/package.json
@@ -11,10 +11,12 @@
   },
   "dependencies": {
     "@tailwindcss/typography": "^0.5.9",
+    "markdown-to-jsx": "^7.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-markdown": "^8.0.7",
     "react-query": "^3.39.3",
+    "react-type-animation": "^3.1.0",
     "remark-gfm": "^3.0.1"
   },
   "devDependencies": {
