--- a/textbase/frontend/package.json
+++ b/textbase/frontend/package.json
@@ -15,7 +15,8 @@
     "react-dom": "^18.2.0",
     "react-markdown": "^8.0.7",
     "react-query": "^3.39.3",
-    "remark-gfm": "^3.0.1"
+    "remark-gfm": "^3.0.1",
+    "tesseract.js": "^4.1.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
