--- a/textbase/frontend/package.json
+++ b/textbase/frontend/package.json
@@ -13,9 +13,13 @@
     "@tailwindcss/typography": "^0.5.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.1",
+    "react-icons": "^4.10.1",
+    "react-loader-spinner": "^5.3.4",
     "react-markdown": "^8.0.7",
     "react-query": "^3.39.3",
-    "remark-gfm": "^3.0.1"
+    "remark-gfm": "^3.0.1",
+    "rxjs": "^7.8.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
