--- a/.gitignore
+++ b/.gitignore
@@ -14,7 +14,6 @@ __pycache__/
 .Python
 build/
 develop-eggs/
-# dist/
 downloads/
 eggs/
 .eggs/
@@ -88,13 +87,6 @@ ipython_config.py
 # pyenv
 .python-version
 
-# pipenv
-#   According to pypa/pipenv#598, it is recommended to include Pipfile.lock in version control.
-#   However, in case of collaboration, if having platform-specific dependencies or dependencies
-#   having no cross-platform support, pipenv may install dependencies that don't work, or not
-#   install all needed dependencies.
-#Pipfile.lock
-
 # PEP 582; used by e.g. github.com/David-OConnor/pyflow
 __pypackages__/
 
@@ -114,6 +106,7 @@ ENV/
 env.bak/
 venv.bak/
 cpcli-env/
+poetry.lock
 
 # Spyder project settings
 .spyderproject
