--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,7 @@ langchain = "^0.0.239"
 fastapi = "*"
 uvicorn = "*"
 pydantic = "^1.9.9"
-
+tabulate = "^0.9.0"
 
 [build-system]
 requires = ["poetry-core"]
