--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,13 +9,9 @@ readme = "README.md"
 python = "^3.8.1"
 requests = "^2.31.0"
 openai = "^0.27.8"
-twilio = "^8.5.0"
 python-dotenv = "^1.0.0"
-langchain = "^0.0.239"
-fastapi = "*"
-uvicorn = "*"
-pydantic = "^1.9.9"
-
+tabulate = "^0.9.0"
+functions-framework = "^3.4.0"
 
 [build-system]
 requires = ["poetry-core"]
