--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,7 +2,7 @@
 name = "textbase"
 version = "0.1.0"
 description = "A python library to help you create chatbots easily with some more configurations"
-authors = ["kaus-cofactory <kaustubhshukla@cofactory.ai>"]
+authors = ["kaus-cofactory <kaustubhshukla@cofactory.ai>", "sammyCofactory <samarthar@cofactory.ai>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
