--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,12 +6,13 @@ authors = ["kaus-cofactory <kaustubhshukla@cofactory.ai>", "sammyCofactory <sama
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.8.1"
+python = "^3.9.0"
 requests = "^2.31.0"
 openai = "^0.27.8"
 python-dotenv = "^1.0.0"
 tabulate = "^0.9.0"
 functions-framework = "^3.4.0"
+yaspin = "^3.0.0"
 
 [build-system]
 requires = ["poetry-core"]
