--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ tabulate = "^0.9.0"
 functions-framework = "^3.4.0"
 yaspin = "^3.0.0"
 pydantic = "^2.3.0"
+cohere = "^4.21"
 
 [build-system]
 requires = ["poetry-core"]
