--- a/textbase/frontend/package.json
+++ b/textbase/frontend/package.json
@@ -13,9 +13,11 @@
     "@fortawesome/fontawesome-svg-core": "^6.4.2",
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "axios": "^1.5.0",
     "lottie-react": "^2.4.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "tesseract.js": "^4.1.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
