--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,6 @@
 OPENAI_API_KEY=
 HUGGINGFACEHUB_API_TOKEN=
+TWILIO_ACCOUNT_SID= 
+TWILIO_AUTH_TOKEN= 
+TWILIO_PHONENUMBER= 
+TWILIO_MSG_SERVICE_SID= 
