--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,8 +14,12 @@ python-dotenv = "^1.0.0"
 tabulate = "^0.9.0"
 functions-framework = "^3.4.0"
 yaspin = "^3.0.0"
-pydantic = "^2.3.0"
+pydantic = "^1.10.0"
 replicate = "^0.11.0"
+langchain = {extras = ["llms"], version = "^0.0.279"}
+chromadb = "^0.4.8"
+pdfminer-six = "^20221105"
+tiktoken = "^0.4.0"
 
 [build-system]
 requires = ["poetry-core"]
