--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ functions-framework = "^3.4.0"
 yaspin = "^3.0.0"
 pydantic = "^2.3.0"
 google-generativeai = "^0.1.0"
+rich = "^13.5.2"
 
 [build-system]
 requires = ["poetry-core"]
