--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,8 @@ tabulate = "^0.9.0"
 functions-framework = "^3.4.0"
 yaspin = "^3.0.0"
 pydantic = "^2.3.0"
+google-generativeai = "^0.1.0"
+rich = "^13.5.2"
 replicate = "^0.11.0"
 
 [build-system]
